# sourcify-sync

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.py  config.toml  downloader.py  justfile  logging_setup.py  main.py  manifest.py  pyproject.toml
.claude/: settings.json
.claude/commands/: update-docs.md
tests/: conftest.py  test_config.py  test_downloader.py  test_logging_setup.py  test_main.py  test_manifest.py
