[project]
name = "sourcify-sync"
version = "0.1.0"
description = "Download files from Sourcify export manifest using aria2c"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
sourcify-sync = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
]
